# particles

./: .gitignore  .gitmodules  CMakeLists.txt  makevideo.sh  particles.files
kernels/: gravity.h  kernels.c
kernels/export/: deriv.h  particle.h  prop.h  tree.h  tree_depth.h
perf/: cpu.txt  gpu-nv.txt  hybrid-nv.txt
scripts/: init.sh  make.bat
shaders/: copy.frag  defs.glsl  draw-point.frag  draw-point.vert  draw-quad.frag  draw-quad.vert  draw.frag  draw.vert  fill.vert  gravity.glsl  head.glsl  property.glsl  shader.frag  shader.vert  solve-head.glsl  solve-main.glsl  solve-plain-euler.frag  solve-plain-rk4-d.frag  solve-plain-rk4-v-3.frag  solve-plain-rk4-v-4.frag  solve-plain.frag  solve-rk4-v-1-2.frag  solve-tree-euler.frag  solve-tree-rk4-d.frag  solve-tree.frag  solve.frag  tree.glsl
source/: const.hpp  engine.hpp  glbank.hpp  graphics.hpp  main.cpp  octree.hpp  opencl.hpp  particle.hpp  render.hpp  scene.hpp  solver.hpp  solvercpu.hpp  solvergpu.hpp  solverhybrid.hpp
